<resources>
    <string name="res_0x7f130000_name_removed">Account</string>
    <string name="res_0x7f130001_name_removed">Save widget</string>
    <string name="res_0x7f130002_name_removed">State</string>
    <string name="res_0x7f130003_name_removed">City</string>
    <string name="res_0x7f130004_name_removed">Address</string>
    <string name="res_0x7f130005_name_removed">Apt/ste (optional)</string>
    <string name="res_0x7f130006_name_removed">Instagram</string>
    <string name="res_0x7f130007_name_removed">Get quick access to your recent or favorite chats.</string>
    <string name="res_0x7f130008_name_removed">SETTINGS</string>
    <string name="res_0x7f130009_name_removed">Threads</string>
    <string name="res_0x7f13000a_name_removed">Live video is paused</string>
    <string name="res_0x7f13000b_name_removed">Close browser</string>
    <string name="res_0x7f13000c_name_removed">%1$s wants to use your device\'s camera.</string>
    <string name="res_0x7f13000d_name_removed">%1$s wants to use your device\'s location.</string>
    <string name="res_0x7f13000e_name_removed">Please allow all media to use file chooser</string>
    <string name="res_0x7f13000f_name_removed">Allow</string>
    <string name="res_0x7f130010_name_removed">Block</string>
    <string name="res_0x7f130011_name_removed">Minimize browser</string>
    <string name="res_0x7f130012_name_removed">There are problems with the security certificate for this site</string>
    <string name="res_0x7f130013_name_removed">Go back</string>
    <string name="res_0x7f130014_name_removed">Security error</string>
    <string name="res_0x7f130015_name_removed">Navigate back</string>
    <string name="res_0x7f130016_name_removed">Photo tips</string>
    <string name="res_0x7f130017_name_removed">Take a photo</string>
    <string name="res_0x7f130018_name_removed">Can\'t create a bug report right now. Sorry!</string>
    <string name="res_0x7f130019_name_removed">Your account has been successfully linked.</string>
    <string name="res_0x7f13001a_name_removed">We won\'t link your account. You can still make a purchase.</string>
    <string name="res_0x7f13001b_name_removed">Something went wrong and we are working to get it fixed.</string>
    <string name="res_0x7f13001c_name_removed">Amazon account successfully linked</string>
    <string name="res_0x7f13001d_name_removed">We won\'t link your Amazon account. You can still make a purchase.</string>
    <string name="res_0x7f13001e_name_removed">We won\'t link your Amazon account.</string>
    <string name="res_0x7f13001f_name_removed">Something went wrong and we are working to get it fixed.</string>
    <string name="res_0x7f130020_name_removed">Instagram Camera</string>
    <string name="res_0x7f130021_name_removed">Security code</string>
    <string name="res_0x7f130022_name_removed">Card Number</string>
    <string name="res_0x7f130023_name_removed">Add billing address</string>
    <string name="res_0x7f130024_name_removed">Billing address</string>
    <string name="res_0x7f130025_name_removed">See less</string>
    <string name="res_0x7f130026_name_removed">See more (%1$d)</string>
    <string name="res_0x7f130027_name_removed">Suggested from your shipping addresses</string>
    <string name="res_0x7f130028_name_removed">Suggested from your shipping address</string>
    <string name="res_0x7f130029_name_removed">Billing address same as shipping</string>
    <string name="res_0x7f13002a_name_removed">Chats</string>
    <string name="res_0x7f13002b_name_removed">Chats</string>
    <string name="res_0x7f13002c_name_removed">Loading…</string>
    <string name="res_0x7f13002d_name_removed">Allow camera access</string>
    <string name="res_0x7f13002e_name_removed">Don\'t allow camera access</string>
    <string name="res_0x7f13002f_name_removed">Then you\'ll be able to scan your card. You can change this in your settings any time.</string>
    <string name="res_0x7f130030_name_removed">Allow Facebook to access your camera</string>
    <string name="res_0x7f130031_name_removed">Allow Instagram to access your camera</string>
    <string name="res_0x7f130032_name_removed">Custom</string>
    <string name="res_0x7f130033_name_removed">3 digit code</string>
    <string name="res_0x7f130034_name_removed">4 digit code</string>
    <string name="res_0x7f130035_name_removed">Confirm</string>
    <string name="res_0x7f130036_name_removed">CVV</string>
    <string name="res_0x7f130037_name_removed">Confirm your CVV to use autofill</string>
    <string name="res_0x7f130038_name_removed">%1$dd</string>
    <string name="res_0x7f130039_name_removed">Enter the 3- or 4-digit security code on your %1$s • %2$s to autofill this form.</string>
    <string name="res_0x7f13003a_name_removed">As an extra security check please enter details for your card ending with %1$s.</string>
    <string name="res_0x7f13003b_name_removed">As an extra security check, please enter the full card number for the card ending in %1$s.</string>
    <string name="res_0x7f13003c_name_removed">Add the Full Card Number for %1$s • %2$s.</string>
    <string name="res_0x7f13003d_name_removed">Confirm Card Details</string>
    <string name="res_0x7f13003e_name_removed">Security code</string>
    <string name="res_0x7f13003f_name_removed">Card Number</string>
    <string name="res_0x7f130040_name_removed">Enter the 3- or 4-digit security code on your %1$s • %2$s to autofill this form.</string>
    <string name="res_0x7f130041_name_removed">As an extra security check please enter details for your card ending with %1$s.</string>
    <string name="res_0x7f130042_name_removed">As an extra security check, please enter the full card number for the card ending in %1$s.</string>
    <string name="res_0x7f130043_name_removed">Add the Full Card Number for %1$s • %2$s.</string>
    <string name="res_0x7f130044_name_removed">Confirm Card Details</string>
    <string name="res_0x7f130045_name_removed">Confirm</string>
    <string name="res_0x7f130046_name_removed">Confirm the Security Code for %1$s • %2$s</string>
    <string name="res_0x7f130047_name_removed">Confirm</string>
    <string name="res_0x7f130048_name_removed">Confirm the Security Code for %1$s • %2$s</string>
    <string name="res_0x7f130049_name_removed">OK</string>
    <string name="res_0x7f13004a_name_removed">OK</string>
    <string name="res_0x7f13004b_name_removed">Direct</string>
    <string name="res_0x7f13004c_name_removed">Sharing Live Location</string>
    <string name="res_0x7f13004d_name_removed">Like</string>
    <string name="res_0x7f13004e_name_removed">Reply</string>
    <string name="res_0x7f13004f_name_removed">Instagram user</string>
    <string name="res_0x7f130050_name_removed">(%1$s) %2$s</string>
    <string name="res_0x7f130051_name_removed">(%1$s): %2$s: %3$s</string>
    <string name="res_0x7f130052_name_removed">%1$s: %2$s</string>
    <string name="res_0x7f130053_name_removed">Check your device\'s network connection and try again.</string>
    <string name="res_0x7f130054_name_removed">No network connection</string>
    <string name="res_0x7f130055_name_removed">Try again</string>
    <string name="res_0x7f130056_name_removed">Something went wrong.</string>
    <string name="res_0x7f130057_name_removed">open</string>
    <string name="res_0x7f130058_name_removed">Email</string>
    <string name="res_0x7f130059_name_removed">The website you\'re viewing is attempting to open an external app. Would you like to continue?</string>
    <string name="res_0x7f13005a_name_removed">Go back</string>
    <string name="res_0x7f13005b_name_removed">Continue</string>
    <string name="res_0x7f13005c_name_removed">You\'re leaving our app</string>
    <string name="res_0x7f13005d_name_removed">This may be because of a technical error that we\'re working to get fixed. Try reloading this page.</string>
    <string name="res_0x7f13005e_name_removed">Refresh</string>
    <string name="res_0x7f13005f_name_removed">Page isn\'t available right now</string>
    <string name="res_0x7f130060_name_removed">Last name</string>
    <string name="res_0x7f130061_name_removed">Page can\'t be loaded</string>
    <string name="res_0x7f130062_name_removed">Open with …</string>
    <string name="res_0x7f130063_name_removed">Open in %1$s</string>
    <string name="res_0x7f130064_name_removed">More options</string>
    <string name="res_0x7f130065_name_removed">First name</string>
    <string name="res_0x7f130066_name_removed">Messages · %1$s</string>
    <string name="res_0x7f130067_name_removed">Messages</string>
    <string name="res_0x7f130068_name_removed">%1$s</string>
    <string name="res_0x7f130069_name_removed">%1$dh</string>
    <string name="res_0x7f13006a_name_removed">You\'re now viewing full screen. Swipe left or tap back button to exit.</string>
    <string name="res_0x7f13006b_name_removed">Enable access to your camera to do things like take and share photos, record videos and use visual effects. You can change your choice at any time in your device settings.</string>
    <string name="res_0x7f13006c_name_removed">This feature requires camera access. Change the permissions in your device\'s application settings.</string>
    <string name="res_0x7f13006d_name_removed">Open Settings</string>
    <string name="res_0x7f13006e_name_removed">Link copied</string>
    <string name="res_0x7f13006f_name_removed">Report</string>
    <string name="res_0x7f130070_name_removed">Report website</string>
    <string name="res_0x7f130071_name_removed">Share</string>
    <string name="res_0x7f130072_name_removed">Instagram</string>
    <string name="res_0x7f130073_name_removed">Instagram</string>
    <string name="res_0x7f130074_name_removed">[{ \"include\": \"https://www.instagram.com/.well-known/assetlinks.json\" },{ \"relation\": [\"delegate_permission/common.handle_all_urls\"], \"target\": { \"namespace\": \"web\", \"site\": \"https://m.instagram.com\" } },{ \"relation\": [\"delegate_permission/common.handle_all_urls\"], \"target\": { \"namespace\": \"web\", \"site\": \"https://www.instagram.com\" } }]</string>
    <string name="res_0x7f130075_name_removed">Close the full photo preview</string>
    <string name="res_0x7f130076_name_removed">We\'re having trouble setting up %2$s in %1$s right now. You can try again, or use %2$s in English (US) for now.</string>
    <string name="res_0x7f130077_name_removed">Just a moment while we set up %1$s…</string>
    <string name="res_0x7f130078_name_removed">Try again</string>
    <string name="res_0x7f130079_name_removed">Continue in English (US)</string>
    <string name="res_0x7f13007a_name_removed">To see your chats here, open Instagram and log in first.</string>
    <string name="res_0x7f13007b_name_removed">You\'re not logged into Instagram</string>
    <string name="res_0x7f13007c_name_removed">Learn more</string>
    <string name="res_0x7f13007d_name_removed">Checkout provided by Meta.</string>
    <string name="res_0x7f13007e_name_removed">A link to a sheet explaining how this checkout works, and how Meta will use the user\'s information, with links to relevant privacy policies.</string>
    <string name="res_0x7f13007f_name_removed">Meta Pay</string>
    <string name="res_0x7f130080_name_removed">privacy policy</string>
    <string name="res_0x7f130081_name_removed">terms</string>
    <string name="res_0x7f130082_name_removed">By tapping %1$s you agree that Meta may use your cart and purchase info according to our [[terms_token]] and [[data_terms_token]], including for personalization and ads.</string>
    <string name="res_0x7f1300a2_name_removed">Recent</string>
    <string name="res_0x7f1300ea_name_removed">Cancel</string>
    <string name="res_0x7f1300eb_name_removed">Dark</string>
    <string name="res_0x7f1300ec_name_removed">Default</string>
    <string name="res_0x7f1300ed_name_removed">Light</string>
    <string name="res_0x7f13012c_name_removed">Theme</string>
</resources>