<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/chat_type_selection_dialog"
    android:background="?attr/igds_color_elevated_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/abc_text_size_menu_header_material"
        android:textColor="?attr/igds_color_secondary_text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/res_0x7f13002a_name_removed"
        android:layout_marginVertical="10dp"/>
    <include layout="@layout/appwidget_row_divider"/>
    <TextView
        android:textSize="@dimen/account_group_management_row_text_size"
        android:textColor="?attr/igds_color_primary_text"
        android:gravity="center"
        android:id="@+id/recent_chat_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/res_0x7f1300a2_name_removed"
        android:layout_marginVertical="15dp"/>
    <include layout="@layout/appwidget_row_divider"/>
    <TextView
        android:textSize="@dimen/account_group_management_row_text_size"
        android:textColor="?attr/igds_color_primary_text"
        android:gravity="center"
        android:id="@+id/custom_chat_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/res_0x7f130032_name_removed"
        android:layout_marginVertical="15dp"/>
    <include layout="@layout/appwidget_row_divider"/>
    <TextView
        android:textSize="@dimen/account_group_management_row_text_size"
        android:textColor="@color/red_5"
        android:gravity="center"
        android:id="@+id/exit_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/res_0x7f1300ea_name_removed"
        android:layout_marginVertical="15dp"/>
</LinearLayout>
