<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/widget_settings_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/generic_widget_header"/>
    <include
        android:id="@+id/instagram_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widget_settings_header"
        android:layout_marginStart="@dimen/abc_select_dialog_padding_start_material"
        android:layout_marginVertical="12dp"
        layout="@layout/direct_app_widget_settings_header"/>
    <View
        android:id="@+id/divider_1"
        android:background="?attr/dividerColor"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/instagram_header"
        android:layout_marginVertical="2dp"/>
    <TextView
        android:textSize="@dimen/abc_text_size_menu_header_material"
        android:textColor="?attr/igds_color_secondary_text"
        android:id="@+id/settings_page_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_0x7f130007_name_removed"
        android:layout_below="@+id/divider_1"
        android:layout_marginStart="@dimen/abc_select_dialog_padding_start_material"
        android:layout_marginVertical="12dp"/>
    <TextView
        android:textSize="@dimen/abc_text_size_menu_header_material"
        android:textColor="?attr/igds_color_secondary_text"
        android:id="@+id/settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_0x7f130008_name_removed"
        android:layout_below="@+id/settings_page_description"
        android:layout_marginStart="@dimen/abc_select_dialog_padding_start_material"/>
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/account_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_label"
        android:layout_marginHorizontal="@dimen/abc_select_dialog_padding_start_material"
        android:layout_marginVertical="@dimen/ad4ad_button_bottom_margin">
        <TextView
            android:textSize="@dimen/account_group_management_row_text_size"
            android:textColor="?attr/igds_color_primary_text"
            android:id="@+id/account_setting_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_0x7f130000_name_removed"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:textSize="@dimen/account_group_management_row_text_size"
            android:textColor="@color/badge_color"
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:id="@+id/divider_account"
        android:background="?attr/dividerColor"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/account_setting"/>
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/theme_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_account"
        android:layout_marginHorizontal="@dimen/abc_select_dialog_padding_start_material"
        android:layout_marginVertical="@dimen/ad4ad_button_bottom_margin">
        <TextView
            android:textSize="@dimen/account_group_management_row_text_size"
            android:textColor="?attr/igds_color_primary_text"
            android:id="@+id/theme_setting_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_0x7f13012c_name_removed"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:textSize="@dimen/account_group_management_row_text_size"
            android:textColor="@color/badge_color"
            android:id="@+id/theme_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_0x7f1300ec_name_removed"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:id="@+id/divider_theme"
        android:background="?attr/dividerColor"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/theme_setting"/>
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/chats_type_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_theme"
        android:layout_marginHorizontal="@dimen/abc_select_dialog_padding_start_material"
        android:layout_marginVertical="@dimen/ad4ad_button_bottom_margin">
        <TextView
            android:textSize="@dimen/account_group_management_row_text_size"
            android:textColor="?attr/igds_color_primary_text"
            android:id="@+id/chats_type_setting_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_0x7f13002a_name_removed"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:textSize="@dimen/account_group_management_row_text_size"
            android:textColor="@color/badge_color"
            android:id="@+id/chat_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_0x7f1300a2_name_removed"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <include
        android:id="@+id/custom_chats_list"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chats_type_setting"
        layout="@layout/direct_app_widget_custom_chat_settings"/>
    <View
        android:id="@+id/divider_2"
        android:background="?attr/dividerColor"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/add_widget_button"
        android:layout_marginVertical="4dp"/>
    <Button
        android:textSize="@dimen/font_large"
        android:textColor="@color/design_dark_default_color_on_background"
        android:id="@+id/add_widget_button"
        android:background="@drawable/direct_widget_button_background"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/res_0x7f130001_name_removed"
        android:layout_alignParentBottom="true"
        android:onClick="confirmConfiguration"
        android:textAlignment="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"/>
</RelativeLayout>
