<?xml version="1.0" encoding="utf-8"?>
<com.instagram.common.ui.base.IgLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.instagram.common.ui.base.IgLinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/loading_strings_progress_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="@dimen/ab_test_media_thumbnail_preview_item_internal_padding"
        android:layout_marginEnd="@dimen/ab_test_media_thumbnail_preview_item_internal_padding">
        <com.instagram.common.ui.base.IgTextView
            android:gravity="center"
            android:id="@+id/language_pack_loading_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"/>
        <com.instagram.common.ui.base.IgProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.instagram.common.ui.base.IgLinearLayout>
    <com.instagram.common.ui.base.IgLinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/loading_strings_error_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/ab_test_media_thumbnail_preview_item_internal_padding"
        android:layout_marginStart="@dimen/ab_test_media_thumbnail_preview_item_internal_padding"
        android:layout_marginEnd="@dimen/ab_test_media_thumbnail_preview_item_internal_padding">
        <com.instagram.common.ui.base.IgView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <com.instagram.common.ui.base.IgTextView
            android:textSize="26sp"
            android:textColor="@color/igds_primary_text"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_0x7f130056_name_removed"/>
        <com.instagram.common.ui.base.IgTextView
            android:textSize="14sp"
            android:textColor="?attr/igds_color_secondary_text"
            android:gravity="center"
            android:id="@+id/language_pack_loading_failed_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/abc_button_padding_horizontal_material"
            android:layout_marginBottom="24dp"
            android:lineSpacingExtra="4dp"/>
        <com.instagram.common.ui.base.IgView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <com.instagram.common.ui.base.IgView
            android:background="?attr/dividerColor"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/abc_button_padding_horizontal_material"/>
        <com.instagram.common.ui.base.IgTextView
            android:textSize="@dimen/abc_text_size_menu_header_material"
            android:textStyle="bold"
            android:textColor="?attr/igds_color_text_on_color"
            android:gravity="center"
            android:id="@+id/use_english_button"
            android:background="@drawable/blue_button_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_alert_dialog_button_dimen"
            android:layout_marginTop="@dimen/abc_button_padding_horizontal_material"
            android:text="@string/res_0x7f130079_name_removed"/>
        <com.instagram.common.ui.base.IgTextView
            android:textSize="@dimen/abc_text_size_menu_header_material"
            android:textStyle="bold"
            android:textColor="?attr/igds_color_primary_button"
            android:gravity="center"
            android:id="@+id/retry_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_alert_dialog_button_dimen"
            android:layout_marginTop="@dimen/abc_button_padding_horizontal_material"
            android:text="@string/res_0x7f130078_name_removed"/>
    </com.instagram.common.ui.base.IgLinearLayout>
</com.instagram.common.ui.base.IgLinearLayout>
